# pyworld-stubs

./: .gitignore  README.md  pyproject.toml
pyworld-stubs/: __init__.pyi
src/pyworld-stubs/: __init__.pyi
